# medi

./: .env.example  .gitignore  DESIGN.md  README.md  pyproject.toml
docs/: codebase_deep_dive_report.md  data.md  decompose_input_retrospective.md  persistent_triage_session_resume_plan.md  phase1_retrospective.md  phase2_retrospective.md  phase3_retrospective.md  phase4_retrospective.md  triage_agent_langgraph_notes.md  triage_flow_walkthrough.md  临时.md  面试准备.md
medi/: cli.py
medi/agents/: orchestrator.py
medi/agents/health_report/: agent.py  diet_agent.py  schedule_agent.py  schemas.py
medi/agents/medication/: agent.py
medi/agents/triage/: agent.py  clinical_facts.py  clinical_summary.py  department_router.py  intake_facts.py  intake_protocols.py  intake_rules.py  medical_record.py  runner.py  (+8 more)
medi/api/: app.py  schemas.py  session_store.py
medi/core/: context.py  encounter.py  langgraph_checkpoint.py  llm_client.py  observability.py  providers.py  stream_bus.py  tool_runtime.py
medi/knowledge/: build_index.py
medi/memory/: episodic.py  health_profile.py  profile_snapshot.py
tests/: test_checkpoint_resume.py  test_clinical_backloop.py  test_clinical_facts.py  test_context_profile_snapshot.py  test_encounter_state.py  test_hpi_measurements.py  test_intake_controller_tasks.py  test_intake_facts.py  test_intake_prompter_inquirer.py  test_intake_protocols.py  test_intake_review_node.py  test_intake_rules.py  test_medical_record.py  test_orchestrator_intake_state.py  test_preconsultation_record.py  test_profile_snapshot.py  test_safety_gate_node.py  test_task_definitions.py  test_task_progress.py  test_task_tree.py
(+21 files in other folders)
