[project]
name = "medi"
version = "0.1.0"
description = "Medi — 智能健康 Agent 系统"
requires-python = ">=3.11"

dependencies = [
    # LLM
    "anthropic>=0.40.0",

    # 向量检索
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",

    # 数据库
    "aiosqlite>=0.20.0",

    # 流式输出 / CLI
    "rich>=13.7.0",
    "typer>=0.12.0",

    # API
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "python-multipart>=0.0.9",

    # PDF 解析
    "pypdf>=4.0.0",

    # 工具
    "python-dotenv>=1.0.0",
    "pydantic>=2.7.0",
    "aiohttp>=3.9.0",
    # Multi-Agent orchestration
    "langgraph>=0.2.0",
    "langgraph-checkpoint-sqlite>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
medi = "medi.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
